updatd index.css final deployed

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,13 @@
 body {
   font-family: "Poppins", sans-serif;
 }
+
+body::-webkit-scrollbar {
+  width: 9px;
+  background-color: #ffffff;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #e6454d;
+  border-radius: 6px;
+}
